opam-version: "1.2"
name: "tweetnacl"
version: "0.1"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
license: "ISC"
homepage: "https://github.com/vbmithr/ocaml-tweetnacl"
bug-reports: "https://github.com/vbmithr/ocaml-tweetnacl/issues"
dev-repo: "git://github.com/vbmithr/ocaml-tweetnacl"

available: [
  ocaml-version >= "4.02.0"
]

build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
depends: [
  "conf-libsodium" {build}
  "jbuilder" {build & >= "1.0+beta16"}
  "hex" {>= "1.2.0"}
  "cstruct" {>= "3.2.1"}
  "alcotest" {test & >= "0.8.1"}
]
